--- a/t.tex
+++ b/t.tex
@@ -5,6 +5,7 @@
 \usepackage{palatino} 
 \usepackage[font=it]{caption}
 \usepackage{graphicx,amsmath,amssymb,rotating,booktabs,color,enumitem, tikz, csquotes, placeins}
+\usepackage[percent]{overpic}
 \usetikzlibrary{positioning, arrows}
 \usepackage{upgreek}
 
